@startuml Logical View
title Class Diagram

class Game {
  - _rooms : List<Room>
  - _player : Player
  + NUM_LEVELS : int
  + play_game() : void
  + player : Player
  + main() : void
}

abstract class Room {
  - _level : int
  - _player : Player
  + level : int
  + play_room(player : Player) : void
  + __str__() : str
}

class Shop {
  - _items : List<Item>
  + play_room(player : Player) : void
  + buy_items(items : List<Item>) : void
  + __str__() : str
}

class Dungeon {
  - _enemies : List<Enemy>
  + play_room(player : Player) : void
  + combat(player : Player, enemy : Enemy) : void
  + __str__() : str
}

Game --> Room
Room <|-- Shop
Room <|-- Dungeon

abstract class Mob {
  + name : str
  + hp : int
  + attack : int
  + defense : int
  + is_dead : bool
  + attack_entity(target : Mob) : int
  + take_damage(amount : int) : None
}

class Player {
  + max_hp : int
  + money : int
  + inventory : List<Item>
  + weapon : Weapon
  + armor : Armor
  + strength_buff : bool
  + attack_entity(target : Mob) : int
  + heal(amount : int) : int
  + use_potion(p : Potion) : void
  + equip_weapon(w : Weapon) : void
  + equip_armor(a : Armor) : void
  + add_money(amount : int) : void
  + spend_money(amount : int) : bool
}

class Enemy {
  + reward : int
}

Mob <|-- Player
Mob <|-- Enemy

Player --> Item

Dungeon --> Enemy

class Item {
  + name : str
  + value : int
}

class Weapon {
  + attack : int
}

class Armor {
  + defense : int
}

abstract class Potion {
  + use(entity : Mob) : void
}

class PotionHP {
  + heal_value : int
  + use(entity : Mob) : void
}

class PotionStrength {
  + use(entity : Mob) : void
}

Item <|-- Weapon
Item <|-- Armor
Item <|-- Potion

Potion <|-- PotionHP
Potion <|-- PotionStrength

@enduml